Add Node.js script to list files in build directory and update Netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "./list-files.sh && npm run build"
+  command = "node list-files.js && npm run build"
   publish = "dist"
   base = "/"
 
